documentacion de API -- User
