# app/Models/User.php
@@ -10,6 +10,26 @@ use Laravel\Fortify\TwoFactorAuthenticatable;
 use Laravel\Jetstream\HasProfilePhoto;
 use Laravel\Sanctum\HasApiTokens;
 
+/**
+ *
+ * @OA\Schema(
+ * 
+ * required={"id,title"},
+ * @OA\Xml(name="user"),
+ * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
+ * @OA\Property(property="name", type="string", readOnly="true", example="Sandra Walter"),
+ * @OA\Property(property="email", type="string", readOnly="true", example="example@batoilogic.com"),
+ * @OA\Property(property="password", type="string", readOnly="true"),
+ * @OA\Property(property="role", type="string", readOnly="true",description="Specifies the role of the user in the app", example="admin"),
+ * @OA\Property(property="remember_token", type="string", readOnly="true",  description="token for API autherntication"),
+ * @OA\Property(property="profile_photo_path", type="string", readOnly="true",  description="location where th user's profile photo can be found"),
+ * @OA\Property(property="email", type="string", readOnly="true", example="Big Sad Street"),
+ * )
+ * 
+ * Class User
+ * 
+ */
+
 class User extends Authenticatable
 {
     use HasApiTokens;
@@ -27,6 +47,7 @@ class User extends Authenticatable
         'name',
         'email',
         'password',
+        'address',
     ];
 
     /**
